--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "build": "webpack --mode production",
     "postinstall": "npm run build",
-    "dev": "webpack serve --mode development --open"
+    "dev": "webpack serve --mode development"
   },
   "engines": {
     "node": ">=14.0.0",
@@ -28,7 +28,9 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-middleware": "^7.2.1",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-hot-middleware": "^2.26.1"
   },
   "dependencies": {
     "express": "^4.19.2"
