--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack --mode production",
+    "build": "cd src && webpack --mode production",
     "postinstall": "npm run build",
     "dev": "webpack serve --mode development"
   },
