--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
   "name": "ecommerce-vanilla",
   "version": "1.0.0",
-  "description": "e-commerce with vanilla JavaScript",
-  "main": "index.js",
+  "description": "Descripción del proyecto",
+  "main": "src/js/index.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "cd src && webpack --mode production",
-    "postinstall": "npm run build",
-    "dev": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
-  },
-  "keywords": [],
-  "author": "Henry J Ventura",
-  "license": "MIT License",
-  "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^7.1.2",
-    "html-loader": "^5.0.0",
-    "html-webpack-plugin": "^5.6.0",
-    "node-sass": "^9.0.0",
-    "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^7.2.1",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-hot-middleware": "^2.26.1"
-  },
+  "author": "Henry Ventura",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0",
+    "style-loader": "^3.3.0",
+    "css-loader": "^6.5.1",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.3.0"
+  },
+  "devDependencies": {
+    "sass-loader": "^12.3.0"
   }
 }
