--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "Henry Ventura",
   "license": "MIT",
   "dependencies": {
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "style-loader": "^3.3.0",
     "css-loader": "^6.5.1",
     "sass": "^1.45.0",
-    "sass-loader": "^12.3.0"
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
     "sass-loader": "^12.3.0"
   }
 }
