--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "ecommerce-vanilla",
+  "name": "ecommerce-js",
   "version": "1.0.0",
-  "description": "Descripción del proyecto",
+  "description": "ecommerce vanilla js",
   "main": "src/js/index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "node server.js",
     "build": "webpack --mode production"
   },
-  "author": "Henry Ventura",
+  "author": "Tu Nombre",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0",
+    "style-loader": "^3.3.0",
     "css-loader": "^6.5.1",
     "sass": "^1.45.0",
     "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.0",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.6.0",
     "sass-loader": "^12.3.0"
   }
 }
