--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "build": "webpack --mode production"
   },
-  "author": "Tu Nombre",
+  "author": "Henry J Ventura",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
