--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "author": "Henry J Ventura",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "style-loader": "^3.3.0",
     "css-loader": "^6.5.1",
+    "express": "^4.17.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "sass": "^1.45.0",
     "sass-loader": "^12.3.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2"
+    "style-loader": "^3.3.0",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "sass-loader": "^12.3.0"
   }
 }
